# boiler

./: CMakeLists.txt  README.md
boilerplates/c/: CMakeLists.txt  source.txt
boilerplates/cpp/: CMakeLists.txt  source.txt
boilerplates/cpp/sdl2/: CMakeLists.txt  source.txt
boilerplates/python/: source.txt
include/: boiler.hpp
src/: boiler.cpp  main.cpp
